// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly with empty query string 1`] = `
<QueryBar
  appName="mockapp"
  disableAutoFocus={false}
  onSelect={[Function]}
  onSubmit={[Function]}
  query=""
  suggestionProviders={Array []}
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow"
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <div
          className="euiFlexItem"
        >
          <EuiOutsideClickDetector
            onOutsideClick={[Function]}
          >
            <div
              aria-controls="typeahead-items"
              aria-expanded={false}
              aria-haspopup="true"
              aria-owns="typeahead-items"
              onClick={[Function]}
              role="combobox"
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <form
                name="queryBarForm"
                role="form"
              >
                <div
                  className="kuiLocalSearch"
                  role="search"
                >
                  <div
                    className="kuiLocalSearchAssistedInput"
                  >
                    <EuiFieldText
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-controls="typeahead-items"
                      aria-label="Search input"
                      autoComplete="off"
                      autoFocus={true}
                      className="kuiLocalSearchAssistedInput__input"
                      compressed={false}
                      data-test-subj="queryInput"
                      fullWidth={true}
                      icon="search"
                      inputRef={[Function]}
                      isLoading={false}
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      placeholder="Search... (e.g. java.lang.String)"
                      role="textbox"
                      spellCheck={false}
                      type="text"
                      value=""
                    >
                      <EuiFormControlLayout
                        compressed={false}
                        fullWidth={true}
                        icon="search"
                        isLoading={false}
                      >
                        <div
                          className="euiFormControlLayout euiFormControlLayout--fullWidth"
                        >
                          <div
                            className="euiFormControlLayout__childrenWrapper"
                          >
                            <EuiValidatableControl>
                              <input
                                aria-activedescendant=""
                                aria-autocomplete="list"
                                aria-controls="typeahead-items"
                                aria-label="Search input"
                                autoComplete="off"
                                autoFocus={true}
                                className="euiFieldText kuiLocalSearchAssistedInput__input euiFieldText--withIcon euiFieldText--fullWidth"
                                data-test-subj="queryInput"
                                onChange={[Function]}
                                onClick={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                placeholder="Search... (e.g. java.lang.String)"
                                role="textbox"
                                spellCheck={false}
                                type="text"
                                value=""
                              />
                            </EuiValidatableControl>
                            <EuiFormControlLayoutIcons
                              icon="search"
                              isLoading={false}
                            >
                              <div
                                className="euiFormControlLayoutIcons"
                              >
                                <EuiFormControlLayoutCustomIcon
                                  type="search"
                                >
                                  <span
                                    className="euiFormControlLayoutCustomIcon"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiFormControlLayoutCustomIcon__icon"
                                      size="m"
                                      type="search"
                                    >
                                      <search
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        height="16"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                        xmlnsXlink="http://www.w3.org/1999/xlink"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                          focusable="false"
                                          height="16"
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width="16"
                                          xmlns="http://www.w3.org/2000/svg"
                                          xmlnsXlink="http://www.w3.org/1999/xlink"
                                        >
                                          <defs>
                                            <path
                                              d="M11.271 11.978l3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738z"
                                              id="search-a"
                                            />
                                          </defs>
                                          <use
                                            xlinkHref="#search-a"
                                          />
                                        </svg>
                                      </search>
                                    </EuiIcon>
                                  </span>
                                </EuiFormControlLayoutCustomIcon>
                              </div>
                            </EuiFormControlLayoutIcons>
                          </div>
                        </div>
                      </EuiFormControlLayout>
                    </EuiFieldText>
                  </div>
                </div>
              </form>
              <SuggestionsComponent
                groupIndex={null}
                itemIndex={null}
                loadMore={[Function]}
                onClick={[Function]}
                onMouseEnter={[Function]}
                query=""
                show={false}
                suggestionGroups={Array []}
              />
            </div>
          </EuiOutsideClickDetector>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</QueryBar>
`;

exports[`render correctly with input query string changed 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <QueryBar
      appName="mockapp"
      disableAutoFocus={false}
      onSelect={[Function]}
      onSubmit={[Function]}
      query=""
      suggestionProviders={
        Array [
          Object {
            "getSuggestions": [Function],
          },
          Object {
            "getSuggestions": [Function],
          },
          Object {
            "getSuggestions": [Function],
          },
        ]
      }
    >
      <EuiFlexGroup
        alignItems="stretch"
        component="div"
        direction="row"
        gutterSize="s"
        justifyContent="flexStart"
        responsive={false}
        wrap={false}
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow"
        >
          <EuiFlexItem
            component="div"
            grow={true}
          >
            <div
              className="euiFlexItem"
            >
              <EuiOutsideClickDetector
                onOutsideClick={[Function]}
              >
                <div
                  aria-controls="typeahead-items"
                  aria-expanded={true}
                  aria-haspopup="true"
                  aria-owns="typeahead-items"
                  onClick={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                >
                  <form
                    name="queryBarForm"
                    role="form"
                  >
                    <div
                      className="kuiLocalSearch"
                      role="search"
                    >
                      <div
                        className="kuiLocalSearchAssistedInput"
                      >
                        <EuiFieldText
                          aria-activedescendant="suggestion-null-null"
                          aria-autocomplete="list"
                          aria-controls="typeahead-items"
                          aria-label="Search input"
                          autoComplete="off"
                          autoFocus={true}
                          className="kuiLocalSearchAssistedInput__input"
                          compressed={false}
                          data-test-subj="queryInput"
                          fullWidth={true}
                          icon="search"
                          inputRef={[Function]}
                          isLoading={false}
                          onChange={[Function]}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          placeholder="Search... (e.g. java.lang.String)"
                          role="textbox"
                          spellCheck={false}
                          type="text"
                          value="mockquery"
                        >
                          <EuiFormControlLayout
                            compressed={false}
                            fullWidth={true}
                            icon="search"
                            isLoading={false}
                          >
                            <div
                              className="euiFormControlLayout euiFormControlLayout--fullWidth"
                            >
                              <div
                                className="euiFormControlLayout__childrenWrapper"
                              >
                                <EuiValidatableControl>
                                  <input
                                    aria-activedescendant="suggestion-null-null"
                                    aria-autocomplete="list"
                                    aria-controls="typeahead-items"
                                    aria-label="Search input"
                                    autoComplete="off"
                                    autoFocus={true}
                                    className="euiFieldText kuiLocalSearchAssistedInput__input euiFieldText--withIcon euiFieldText--fullWidth"
                                    data-test-subj="queryInput"
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyUp={[Function]}
                                    placeholder="Search... (e.g. java.lang.String)"
                                    role="textbox"
                                    spellCheck={false}
                                    type="text"
                                    value="mockquery"
                                  />
                                </EuiValidatableControl>
                                <EuiFormControlLayoutIcons
                                  icon="search"
                                  isLoading={false}
                                >
                                  <div
                                    className="euiFormControlLayoutIcons"
                                  >
                                    <EuiFormControlLayoutCustomIcon
                                      type="search"
                                    >
                                      <span
                                        className="euiFormControlLayoutCustomIcon"
                                      >
                                        <EuiIcon
                                          aria-hidden="true"
                                          className="euiFormControlLayoutCustomIcon__icon"
                                          size="m"
                                          type="search"
                                        >
                                          <search
                                            aria-hidden="true"
                                            className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                            focusable="false"
                                            height="16"
                                            style={null}
                                            viewBox="0 0 16 16"
                                            width="16"
                                            xmlns="http://www.w3.org/2000/svg"
                                            xmlnsXlink="http://www.w3.org/1999/xlink"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                              focusable="false"
                                              height="16"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width="16"
                                              xmlns="http://www.w3.org/2000/svg"
                                              xmlnsXlink="http://www.w3.org/1999/xlink"
                                            >
                                              <defs>
                                                <path
                                                  d="M11.271 11.978l3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738z"
                                                  id="search-a"
                                                />
                                              </defs>
                                              <use
                                                xlinkHref="#search-a"
                                              />
                                            </svg>
                                          </search>
                                        </EuiIcon>
                                      </span>
                                    </EuiFormControlLayoutCustomIcon>
                                  </div>
                                </EuiFormControlLayoutIcons>
                              </div>
                            </div>
                          </EuiFormControlLayout>
                        </EuiFieldText>
                      </div>
                    </div>
                  </form>
                  <SuggestionsComponent
                    groupIndex={null}
                    itemIndex={null}
                    loadMore={[Function]}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    query="mockquery"
                    show={true}
                    suggestionGroups={Array []}
                  />
                </div>
              </EuiOutsideClickDetector>
            </div>
          </EuiFlexItem>
        </div>
      </EuiFlexGroup>
    </QueryBar>
  </Router>
</MemoryRouter>
`;
